tests/chainsaw/restrict-apparmor-profiles/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-apparmor-unconfined
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: unconfined
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
