tests/chainsaw/restrict-apparmor-profiles/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-apparmor-default
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: runtime/default
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
