tests/chainsaw/restrict-apparmor-profiles/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-apparmor-profiles
spec:
  steps:
  - name: create a bad pod with unconfined apparmor
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create a good pod with runtime default apparmor
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod.yaml
  - name: create a good pod with localhost apparmor
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod-localhost.yaml
